examples/errors/unknown_placeholder.aaa
fn
    foo
return
    *a
begin
    nop
end


fn
    main
begin
    nop
end
